--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
-  <head>
-  <script src= 
-"https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"> 
-    </script> 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <meta charset="utf-8">
-    <title>{% block blockTitle %}{% endblock %}</title>
+<html lang="en">
+     {% load static %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  </head>
-  <body>
-    {% block bodyBlock %}
-    <img src = "{% static "Images/mypic.jpg" %}" >
-
-    {% endblock %}
-  </body>
-  {% comment %} <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> {% endcomment %}
+    <link rel="stylesheet" href={% static "css/base.css" %}>
+    <link rel="stylesheet" href={% static "css/home.css" %}>
+</head>
+<body>
+    
+            <img  class ="logo" src= {% static "images/main.png" %} alt="">
+        
+    
+    
+    <div id="carouselExampleSlidesOnly" data-interval="5000"class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src={% static "images/c.jpg" %} alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src={% static "images/b.jpg" %} alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src={% static "images/d.jpg" %} alt="Third slide">
+              </div>
+            </div>
+          </div>
+    {% block content %}{% endblock %}
+</body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script src="https://kit.fontawesome.com/92732e8a90.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/places.js@1.17.1"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+<script src ={% static "js/home.js" %}></script>
 </html>
